# ProjectManager_Client

./: CMakeLists.txt  CMakeUserPresets.json  main.cpp
ElaWidgetTools/lib/: ElaWidgetTools.lib
LoginRegister/: CMakeLists.txt
LoginRegister/include/: LoginWindow.h  ServerCheckWindow.h
LoginRegister/src/: LoginWindow.cpp  ServerCheckWindow.cpp
